# global-education-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  README.de.md  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  tools.lock.json
.github/workflows/: ci.yml  publish.yml
audits/2026-05-21T094452-Z-global-education-mcp/: applicable.json  audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-21T094452-Z-global-education-mcp/findings/: ARCH-012.md  CH-005.md  CH-006.md  OBS-001.md  OBS-003.md  SCALE-002.md  SDK-001.md  SDK-003.md  SEC-006.md  SEC-007.md  SEC-015.md  SEC-022.md
audits/2026-05-21T104807-Z-global-education-mcp/: audit-meta.json  audit-report.md  profile.yaml  summary.json  verification-results.json
scripts/: tool_signatures.py
src/global_education_mcp/: __init__.py  api_client.py  logging_setup.py  server.py
tests/: test_extended_scenarios.py  test_server.py
