[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "global-education-mcp"
version = "0.2.0"
description = "MCP Server für internationale Bildungsdaten – UNESCO UIS (4000+ Indikatoren) und OECD Education at a Glance (SDMX API)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Schulamt der Stadt Zürich" }
]
keywords = [
    "mcp", "education", "unesco", "oecd", "bildung", "international",
    "sdg4", "literacy", "open-data", "sdmx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
    "build",
]

[project.urls]
Homepage = "https://github.com/malkreide/global-education-mcp"
Repository = "https://github.com/malkreide/global-education-mcp"
"UNESCO UIS" = "https://api.uis.unesco.org/api/public/documentation"
"OECD Data Explorer" = "https://data-explorer.oecd.org/"

[project.scripts]
global-education-mcp = "global_education_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/global_education_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: Live-API-Tests gegen echte Endpunkte (deselect mit: -m 'not integration')",
]
